--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.8",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.12",
+    "graphql": "^15.5.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
