--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.38.0",
+    "swiper": "^6.8.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
