--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.12",
+    "aos": "^2.3.4",
     "graphql": "^15.5.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-animated-cursor": "^2.2.0",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-id-swiper": "^4.0.0",
+    "react-parallax-tilt": "^1.5.55",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.38.0",
